--- a/paper/projectBibliography.bib
+++ b/paper/projectBibliography.bib
@@ -21,10 +21,69 @@
  keywords = {constraints, continuum mechanics, dynamics, geometric stiffness, physically based animation, simulation},
 } 
 
+@misc{parker20,
+  author       = {Parker, John},
+  howpublished = {Online},
+  title        = {Real-time visualization of a large number of circles using OpenGL},
+  year         = {2020},
+  url          = {https://www.johnaparker.com/blog/circle-graphics#instanced-drawing}
+}
+
 @misc{Rayon,
   author       = {Stone, Josh et al.},
   howpublished = {GitHub},
   title        = {Rayon: A data parallelism library for Rust},
   year         = {2023},
   url          = {https://github.com/rayon-rs/rayon}
+}
+
+@misc{Macroquad,
+  author       = {Logachev, Fedor},
+  howpublished = {GitHub},
+  title        = {Cross-platform game engine in Rust},
+  year         = {2020},
+  url          = {https://github.com/not-fl3/macroquad}
+}
+
+@misc{Hashbrown,
+  author       = {d'Antras et al.},
+  howpublished = {GitHub},
+  title        = {Hashbrown: Rust port of Google's SwissTable hash map},
+  year         = {2023},
+  url          = {https://github.com/rust-lang/hashbrown}
+}
+
+@inproceedings{muller5,
+author = {Müller, Matthias and Solenthaler, Barbara and Keiser, Richard and Gross, Markus},
+year = {2005},
+month = {07},
+pages = {237-244},
+title = {Particle-Based Fluid-Fluid Interaction},
+journal = {Proceedings of the 2005 ACM SIGGRAPH/Eurographics Symposium on Computer Animation},
+doi = {10.1145/1073368.1073402},
+url = {https://people.eecs.berkeley.edu/~sequin/CS284/PAPERS/fluid%20fluid%20interaction.pdf}
+}
+
+@inproceedings{muller3,
+author = {M\"{u}ller, Matthias and Charypar, David and Gross, Markus},
+title = {Particle-Based Fluid Simulation for Interactive Applications},
+year = {2003},
+isbn = {1581136595},
+publisher = {Eurographics Association},
+address = {Goslar, DEU},
+abstract = {Realistically animated fluids can add substantial realism to interactive applications such as virtual surgery simulators or computer games. In this paper we propose an interactive method based on Smoothed Particle Hydrodynamics (SPH) to simulate fluids with free surfaces. The method is an extension of the SPH-based technique by Desbrun to animate highly deformable bodies. We gear the method towards fluid simulation by deriving the force density fields directly from the Navier-Stokes equation and by adding a term to model surface tension effects. In contrast to Eulerian grid-based approaches, the particle-based approach makes mass conservation equations and convection terms dispensable which reduces the complexity of the simulation. In addition, the particles can directly be used to render the surface of the fluid. We propose methods to track and visualize the free surface using point splatting and marching cubes-based surface reconstruction. Our animation method is fast enough to be used in interactive systems and to allow for user interaction with models consisting of up to 5000 particles.},
+booktitle = {Proceedings of the 2003 ACM SIGGRAPH/Eurographics Symposium on Computer Animation},
+pages = {154–159},
+numpages = {6},
+location = {San Diego, California},
+series = {SCA '03},
+url = {https://matthias-research.github.io/pages/publications/sca03.pdf}
+}
+
+@mastersthesis{adithya12,
+  author  = {Vijaykymar, Adithya},
+  school  = {KTH Royal Institute of Technology},
+  title   = {Smoothed Particle Hydrodynamics Simulation for Continuous Casting},
+  year    = {2012},
+  url     = {https://www.diva-portal.org/smash/get/diva2:573583/FULLTEXT01.pdf}
 }
